--- a/pkgs/development/haskell-modules/configuration-hackage2nix.yaml
+++ b/pkgs/development/haskell-modules/configuration-hackage2nix.yaml
@@ -63,7 +63,9 @@ core-packages:
 # at version 1.4.6.0 and `aeson_1_5_0_0` at version 1.5.0.0.
 #
 # WARNING: This list is generated semiautomatically based on the most recent
-# LTS package set.  DO NOT EDIT BY HAND!
+# LTS package set. If you want to add entries to it, you must do so before the
+# comment saying "# LTS Haskell x.y". Any changes after that commend will be
+# lost the next time `update-stackage.sh` runs.
 default-package-overrides:
   # LTS Haskell 14.20
   - abstract-deque ==0.3
